ADD: ExternalAPIService implementation & unit tests