@@ -2,15 +2,16 @@ package com.example.challenge2.application;
 
 import com.example.challenge2.domain.model.User;
 import com.example.challenge2.domain.repository.UserRepository;
-import com.example.challenge2.presentation.UserDTO;
+import com.example.challenge2.presentation.dto.UserDTO;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
+import org.springframework.lang.NonNull;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -24,8 +25,7 @@ public class UserService {
 
   public List<UserDTO> getAll() {
     LOGGER.info("getAll|in.");
-    List<UserDTO> response =
-        userRepository.findAll().stream().map(this::mapToDTO).collect(Collectors.toList());
+    List<UserDTO> response = userRepository.findAll().stream().map(this::mapToDTO).toList();
     LOGGER.info("getAll|out. totalUsers={}", response.size());
     return response;
   }
@@ -37,10 +37,20 @@ public class UserService {
     return this.mapToDTO(response);
   }
 
+  @PreAuthorize("hasAnyRole('ROLE_ADMIN')")
   public User create(UserDTO userDTO) {
     if (null == userDTO) {
       throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "user.userDto.notNull");
     }
+
+    if (usernameAlreadyExists(userDTO.getUsername())) {
+      throw new ResponseStatusException(HttpStatus.CONFLICT, "user.userDto.usernameAlreadyExists");
+    }
+
+    if (emailAlreadyRegistered(userDTO.getEmail())) {
+      throw new ResponseStatusException(HttpStatus.CONFLICT, "user.userDto.emailAlreadyRegistered");
+    }
+
     LOGGER.info("create|in. username={}", userDTO.getUsername());
     final var newUser = prepareUser(userDTO);
     User createdUser = userRepository.save(newUser);
@@ -48,6 +58,7 @@ public class UserService {
     return createdUser;
   }
 
+  @PreAuthorize("hasAnyRole('ROLE_ADMIN')")
   public void deleteByUserName(String userName) {
     LOGGER.info("deleteByUserName|in. username={}", userName);
     final var user = findUserByUsernameOrThrowException(userName);
@@ -76,5 +87,13 @@ public class UserService {
         .findUserByEmail(email)
         .orElseThrow(
             () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "user.userRecord.notFound"));
+  }
+
+  private boolean usernameAlreadyExists(@NonNull String username) {
+    return userRepository.findUserByUsername(username).isPresent();
+  }
+
+  private boolean emailAlreadyRegistered(@NonNull String email) {
+    return userRepository.findUserByEmail(email).isPresent();
   }
 }
